--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -55,9 +55,9 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 
 # Introduction
 
-Emotional engagement is one of the central reasons why people engage with music in their every day activities and why music is being implicated in various health applications [@juslin2022emotions;@agres2021music]. Significant advances in music information retrieval relating to music emotion recognition (MER) tasks have been made in recent years [@gomez2021;@panda2020audio]. The available features, modelling techniques and datasets have given the field opportunities to refine the accuracy and reliability of predicting annotated emotions from audio. Numerous studies over the last 25 years have established what emotions listeners perceive and recognise in music. In the last 15 years, it has become possible to trace the recognised emotions to musical contents such as expressive features [@lindstrom2003expressivity], structural aspects of music [@eerola_friberg_bresin_2013; @anderson2022ex; @grimaud_eerola_2022], or acoustic features [@yang2008; @panda2013multi; @saari_et_al_2015; @eerola2011c; @panda2020audio] or emergent properties identified through deep learning [@er2019music; @sarkar2020recognition].
+Emotional engagement is a key reason why people engage with music in their every day activities, and it is also why music is increasingly being used in various health applications [@juslin2022emotions;@agres2021music]. In recent years, significant advances have been made in music information retrieval, particularly in music emotion recognition (MER) tasks [@gomez2021;@panda2020audio]. Improvements in available features, modeling techniques, and datasets have provided the field with opportunities to enhance the accuracy and reliability of predicting annotated emotions from audio. Over the past 25 years, numerous studies have established the types of emotions that listeners perceive and recognize in music. In the last 15 years, research has increasingly focused on tracing these recognized emotions back to specific musical components, such as expressive features [@lindstrom2003expressivity], structural aspects of music [@eerola_friberg_bresin_2013; @anderson2022ex; @grimaud_eerola_2022], acoustic features [@yang2008; @panda2013multi; @saari_et_al_2015; @eerola2011c; @panda2020audio], or emergent properties revealed through deep learning techniques [@er2019music; @sarkar2020recognition].
 
-However, there is no consensus on to what degree emotions can be recognised by computational models, and the literature to date paints a diverse picture of success for concepts in affective circumplex -- valence and arousal-- [@Russell1980] and classifying various emotion categories [@fu2010survey].
+However, there is no consensus on the extent to which emotions can be accurately recognized by computational models. The current literature presents a diverse and mixed picture regarding the success of models in predicting emotions within the affective circumplex -- valence and arousal-- [@Russell1980] and in classifying distinct emotion categories [@fu2010survey].
 
 # A brief history of MER
 
@@ -75,7 +75,7 @@ The difficulty in predicting valence reflects a broader challenge in information
 
 ## Aims
 
-Our aim is to establish the level of predictive accuracy for both models of emotional expression that can account for track-specific coordinates in (a) affective circumple space (valence and arousal) and (b) classification of emotion categories based on available and recent studies. We seek to identify the types of issues (modelling techniques, features, and musical qualities used) that significantly influence the prediction rates. To achieve these aims, we carry out a meta-analysis focused on journal articles published in the last 10 years. Based on literature, we articulate broad hypotheses such as arousal being predicted to a higher degree than valence, which is more challenging and more context dependent than arousal. For classification, simple utilitarian emotions (e.g., fear, anger) will be easier to predict than complex social emotions (e.g., sadness, nostalgia).
+Our aim is to evaluate the predictive accuracy of two models of emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent to identify key factors such as modeling techniques and features that significantly affect  prediction accuracy. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years. Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model. For emotion classification, we expect simple utilitarian emotions (e.g., fear, anger) will be easier to predict than more complex social emotions (e.g., sadness, nostalgia).
 
 # Methods
 
@@ -190,7 +190,13 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 
 {{< include _figure1.qmd >}}
 
-The results indicate the valence can be accounted generally moderately well, _r_ = 0.658 (95%CI 0.557-0.740) for valence Max (the best model from each of the 24 studies), while all models (n=120) encoded in these studies yield significantly lower overall prediction rate ( _r_ = 0.567). We argue that the lower correlation is due to inclusion of baselines these studies report and therefore not a true measure of the success in the task for our analysis. Further on, looking at the between-study heterogeneity as indexed by $\tau^2$ (0.138) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] for 98.2%, which captures the percentage of variability in the effect size, both indicate substantial heterogeneity. Since $I^2$ is heavily influenced by the size of the studies (large N having low sampling error), the index is perhaps not so insightful here whereas $\tau^2$ less insentive to the size and the number of studies and directly related to the outcome variable (_r_) size, we draw our interpretations about heteregeneity from the latter. To understand the observed effects across the studies and the type of heterogeneity evident in the data, we provide Figure 2 showing a forest plot of the random effects model across all studies using the best model. [TO BE CONTINUED]
+The results indicate that valence can generally be predicted with moderately accuracy, with the best model from each of the 24 studies achieving an average correlation of _r_ = 0.658 (95% CI: 0.557-0.740), called "valence Max" in Table 2. However, when considering all models across these studies (n = 120), the overall prediction rate drops significantly to _r_ = 0.567. We argue that this lower correlation is likely due to the inclusion of baseline models reported in these studies, which may not reflect the true success of the task for the purposes of our analysis.
+
+Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.138) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] at 98.2%, reveals substantial heterogeneity. Since $I^2$ is heavily influenced by study size (with larger N leading to lower sampling error), its value may be less insightful in this context. In contrast, $\tau^2$, which is less sentive to the number of studies and directly linked to the outcome metric (_r_), provides a more reliable measure of heterogeneity in this case.
+
+To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest plot of the random-effects model based on the best-performing models from all studies.
+
+[TO BE CONTINUED]
 
 
 Moving on the arousal, ...
