reporting valence results (text) splits

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2024-10-10 11:48:33 +0100 
+%% Created for Tuomas Eerola at 2024-10-11 12:09:25 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{beveridge2018po,
+	author = {Beveridge, Scott and Knox, Don},
+	date-added = {2024-10-11 11:31:06 +0100},
+	date-modified = {2024-10-11 11:31:06 +0100},
+	doi = {10.1177/0305735617713834},
+	eissn = {1741-3087},
+	issn = {0305-7356},
+	journal = {PSYCHOLOGY OF MUSIC},
+	month = {MAY},
+	number = {3},
+	pages = {411-423},
+	source = {web_of_science},
+	title = {Popular music and the role of vocal melody in perceived emotion},
+	volume = {46},
+	year = {2018}}
+
+@article{griffiths2021am,
+	author = {Griffiths, Darryl and Cunningham, Stuart and Weinel, Jonathan and Picking, Richard},
+	date-added = {2024-10-11 11:30:37 +0100},
+	date-modified = {2024-10-11 11:30:37 +0100},
+	doi = {10.1080/09298215.2021.1977336},
+	earlyaccessdate = {SEP 2021},
+	eissn = {1744-5027},
+	issn = {0929-8215},
+	journal = {JOURNAL OF NEW MUSIC RESEARCH},
+	month = {AUG 8},
+	number = {4},
+	pages = {355-372},
+	source = {web_of_science},
+	title = {A multi-genre model for music emotion recognition using linear regressors},
+	volume = {50},
+	year = {2021}}
 
 @article{higgins2002quantifying,
 	author = {Higgins, Julian PT and Thompson, Simon G},
