--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -160,7 +160,7 @@ Although the total number of studies meeting the criteria described in the previ
 
 We first report regression studies that predict valence and arousal.
 
-## Prediction success for valence and arousal (or affect dimensions)
+## Prediction success for affect dimensions
 
 See `analysis/analysis.qmd`
 
@@ -173,7 +173,7 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 | Valence All  | 120,73685   | 0.567 \[0.530; 0.603\]  | 23.7  | .0001 | 0.083    | 97.5% |
 | Valence Max  | 24,15660    | 0.659 \[0.557; 0.740\]  | 10.14 | .0001 | 0.138    | 98.2% |
 | *N Features* |             |                         |       |       |          |       |
-| \<18 F       | 5,3036      | 0.811 \[0.566; 0.775\]  | \-    | \-    | 0.182    | 98.9% |
+| \<18 F       | 5,3036      | 0.811 \[0.566; 0.???\]  | \-    | \-    | 0.182    | 98.9% |
 | 18-260 F     | 11,7318     | 0.548 \[0.343; 0.703\]  | \-    | \-    | 0.133    | 97.6% |
 | 260+ F       | 7,4562      | 0.685 \[0.566; 0.775\]  | \-    | \-    | 0.044    | 97.2% |
 | *Techniques* |             |                         |       |       |          |       |
@@ -183,9 +183,7 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 | NN           | 4,2249      | 0.340 \[-0.097; 0.668\] | \-    | \-    | 0.0761   | 97.1% |
 | RF           | 4,4074      | 0.702 \[0.391; 0.869\]  | \-    | \-    | 0.057    | 98.5% |
 
-
 -   OTHER GROUPINGS? STIMULUS MIXED/SINGLE GENRE, PREDICTION/EXPLANATION
-
 <!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
 
 {{< include _figure1.qmd >}}
@@ -194,12 +192,15 @@ The results indicate that valence can generally be predicted with moderately acc
 
 Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.138) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] at 98.2%, reveals substantial heterogeneity. Since $I^2$ is heavily influenced by study size (with larger N leading to lower sampling error), its value may be less insightful in this context. In contrast, $\tau^2$, which is less sentive to the number of studies and directly linked to the outcome metric (_r_), provides a more reliable measure of heterogeneity in this case.
 
-To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest plot of the random-effects model based on the best-performing models from all studies.
+To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest plot of the random-effects model, based on the best-performing models from all studies. The range of prediction values (correlations) is broad, spanning from 0.13 to 0.92, with all studies except Koh et al. (2023) demonstrating evidence of positive correlations. A mean estimate of 0.66 is achieved by 15 out of the 24 models. While the confidence intervals are generally narrow due to the large sample sizes in each study, there are exceptions, such as smaller sample sizes in @beveridge2018po (n = 20), @saizclar2022pr (n = 40), and in @griffiths2021am (n = 40).
 
-[TO BE CONTINUED]
+To gain insights into the factors contributing to the wide range of model success, we explored several ways of splitting the data. Table 2 presents two key splits: one based on the number of features used, which we hypothesized might influence model performance, and another based on the modeling techniques employed. In terms of feature sets, we categorized them into three groups: few features (<18), a large number of features (18–260), and massive feature sets (260+). Interestingly, models using a relatively small number of features (<18) performed best (_r_ = 0.881, 95% CI: 0.566–0.???) compared to those utilizing larger feature sets. However, it is worth noting that the models using massive feature sets (260+) also performed well (_r_ = 0.685), achieving better and more consistent results than the overall prediction rate (_r_ = 0.659). This observation is supported by the lowest heterogeneity index for the massive feature set group ($\tau^2$ = 0.044), indicating more consistent results across studies.
 
+When analyzing the data by modeling techniques, we identified five sub-groups. Notably, linear models (LM) and flexible discriminants (FD) were the most common, with 8 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (_r_ = 0.784, 95% CI: 0.625–0.881), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited substantially higher heterogeneity ($\tau^2$ = 0.137) compared to other techniques, where $\tau^2$ values were less than half of this. Flexible discriminants performed at a similar level to the overall model average (_r_ = 0.656, 95% CI: 0.484–0.779). The relatively poor performance of neural network (NN) models (_r_ = 0.340, 95% CI: -0.097–0.668) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies.
 
-Moving on the arousal, ...
+These comparisons of sub-groupings are also influenced by other factors, such as the type of stimuli used in the studies and whether the objective is to explain or predict emotions. Although the sub-groupings result in an uneven distribution of studies and observations, they still offer valuable insights. Despite these caveats, the current sub-groupings enable us to identify interesting differences related to model success across the studies.
+
+Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 and Figure 2 shows the same outputs as was done for valence describing the broad pattern of results in tabular and in forest plot formats. Table 3 give 
 
 Table 3. Meta-analytic diagnostic for all regression studies predicting arousal from audio.
 
