fix(extractions): update zhang studies
report medians from boxplots in zhang2016br and zhang2017fe

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -932,17 +932,25 @@ larized Discriminant Analysis (SCRDA)},
   MODEL_COMPLEXITY_PARAMETERS = {Lasso regression tuning parameter: 0.225 determined through cross-validation. kNN: k = 6.},
   MODEL_RATE_EMOTION_NAMES = {arousal},
   MODEL_RATE_EMOTION_VALUES = {
-  bind_field(
-  'various.logistic regression (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .84,av_class.n = 4), 
-  'various.logistic regression (l2).dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
-  'various.svm (l1).dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
-  'various.regularized discriminant analysis.dynamics.chinese.1' = c(classification_accuracy.mean = .83,av_class.n = 4),
-  'various.lr.dynamics.chinese.1' = c(classification_accuracy.mean = .8,av_class.n = 4),
-  'various.knn.dynamics.chinese.1' = c(classification_accuracy.mean = .82, classification_accuracy.median = .8,av_class.n = 4),
-    'various.svm (polynomial kernel).dynamics.chinese.1' = c(classification_accuracy.mean = .774,av_class.n = 4),
-        'various.svm (linear kernel).dynamics.chinese.1' = c(classification_accuracy.mean = .814,av_class.n = 4)
-        )
-  },
+bind_field(
+'various.logistic regression.dynamics.chinese.1' = c(classification_accuracy.median = .8, classification_accuracy.mean = .8),  
+'various.linear discriminant analysis.dynamics.chinese.1' = c(classification_accuracy.median = .79),  
+'various.quadratic discriminant analysis.dynamics.chinese.1' = c(classification_accuracy.median = .77),  
+'various.knn.dynamics.chinese.1' = c(classification_accuracy.median = .8, classification_accuracy.mean = .82),  
+'various.tree.dynamics.chinese.1' = c(classification_accuracy.median = .8),  
+'various.rf.dynamics.chinese.1' = c(classification_accuracy.median = .8),  
+'various.bag.dynamics.chinese.1' = c(classification_accuracy.median = .8),  
+'various.boost.dynamics.chinese.1' = c(classification_accuracy.median = .8),  
+'various.radial support vector regression.dynamics.chinese.1' = c(classification_accuracy.median = .8),  
+'various.polynomial support vector regression.dynamics.chinese.1' = c(classification_accuracy.median = .75, classification_accuracy.mean = .774),  
+'various.linear support vector regression.dynamics.chinese.1' = c(classification_accuracy.median = .82, classification_accuracy.mean = .814),  
+'various.logistic regression (l1).dynamics.chinese.1' = c(classification_accuracy.median = .846, classification_accuracy.mean = .84), 
+'various.logistic regression (l2).dynamics.chinese.1' = c(classification_accuracy.median = .84, classification_accuracy.mean = .83),
+'various.svm (l1).dynamics.chinese.1' = c(classification_accuracy.median = .83),
+'various.svm (l2).dynamics.chinese.1' = c(classification_accuracy.median = .83),
+'various.regularized discriminant analysis.dynamics.chinese.1' = c(classification_accuracy.median = .83, classification_accuracy.mean = .83)
+)
+},
   MODEL_VALIDATION = {cross-validation (for tuning parameters)},
   FINAL_NOTES = {discuss, insufficient details on classification} 
 }
@@ -2490,13 +2498,25 @@ Discriminant Analysis (RDA).},
   MODEL_MEASURE = {Accuracy},
   MODEL_COMPLEXITY_PARAMETERS = {Tuning parameters defined through 10-fold cross validation},
   MODEL_RATE_EMOTION_NAMES = {valence, arousal},
-  MODEL_RATE_EMOTION_VALUES = {  bind_field('various.l1 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = .84, valence_accuracy.mean = 0.64, av_class.n = 4), 
-                   'various.l2 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83, valence_accuracy.mean = 0.68, av_class.n = 4), 
-                   'various.l1 support vector regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83, valence_accuracy.median = 0.72, av_class.n = 4), 
-                   'various.reguliarized discriminant analysis.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83, av_class.n = 4), 
-                   'various.logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.8, av_class.n = 4),
-                   'various.polynomial svm.intensity.zhang2015so.1'  = c(arousal_accuracy.mean = 0.774, av_class.n = 4),
-                    'various.linear svm.intensity.zhang2015so.1'  = c(arousal_accuracy.mean = .814, av_class.n = 4)
+  MODEL_RATE_EMOTION_VALUES = {  bind_field(
+'various.logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.median =.8, valence_accuracy.median = .492),
+'various.linear discriminant analysis.intensity.zhang2015so.1' = c(arousal_accuracy.median = .79, valence_accuracy.median = .571),
+'various.quadratic discriminant analysis.intensity.zhang2015so.1' = c(arousal_accuracy.median = .77),
+'various.dnn.intensity.zhang2015so.1' = c(valence_accuracy.median = .605),
+'various.knn.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8, valence_accuracy.median =.585),
+'various.tree.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8, valence_accuracy.median =.605),
+'various.random forest.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8, valence_accuracy.median =.634),
+'various.bag.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8),
+'various.plr.intensity.zhang2015so.1' = c(valence_accuracy.median = .642),
+'various.boost.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8, valence_accuracy.median =.642),
+'various.svm-radial kernel.intensity.zhang2015so.1' = c(arousal_accuracy.median = .8, valence_accuracy.median =.605),
+'various.svm-polynomial.intensity.zhang2015so.1' = c(arousal_accuracy.median = .75, valence_accuracy.median =.612),
+'various.svm-linear.intensity.zhang2015so.1' = c(arousal_accuracy.median = .82, valence_accuracy.median =.633),
+'various.l1 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.median = .845, valence_accuracy.mean = 0.64, valence_accuracy.median =.628), 
+'various.l2 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.median = 0.84, valence_accuracy.mean = 0.68, valence_accuracy.median =.676), 
+'various.l1 support vector regression.intensity.zhang2015so.1' = c(arousal_accuracy.median = 0.83, valence_accuracy.median =.604), 
+'various.l2 support vector regression.intensity.zhang2015so.1' = c(arousal_accuracy.median = 0.83, valence_accuracy.median =.718), 
+'various.reguliarized discriminant analysis.intensity.zhang2015so.1' = c(arousal_accuracy.median = 0.83, valence_accuracy.median =.62)
 )
 },
   MODEL_VALIDATION = {10-fold cross validation (for tuning parameters)},
