--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -168,20 +168,76 @@ print(S)
 
 ```
 
+### Sub-division based on N features and genres
+
+```{r}
+tmp<-tmp[!is.na(tmp$feature_n_categories),] # remove missing values
+dim(tmp)
+m.cor4 <- metacor(cor = valuesMax,     # values 
+                 n = stimulus_n,
+                 studlab = citekey, # unique_id
+                 data = tmp,
+                 fixed = FALSE,
+                 random = TRUE,
+                 prediction = TRUE,
+                 subgroup =  feature_n_complexity_genre,
+#                 backtransf = TRUE,
+#                 sm = "ZCOR",
+                 method.tau = "REML",# could be PM (Paule-Mandel) as well
+                 method.random.ci = "HK", 
+                 title = "MER: Regression: Valence: Summary")
+print(m.cor4)
+S<-summarise(group_by(tmp,feature_n_complexity_genre),n=n(),obs=sum(stimulus_n))
+print(S)
+
+```
+
 
 
 #### Visualise (forest and funnel plots)
 
 ```{r}
-forest(m.cor,
+#| fig-width: 12
+#| fig-height: 6
+fig2a <- forest(m.cor,
        sortvar = TE,
        prediction = FALSE, 
              print.tau2 = FALSE,
              leftlabs = c("Author", "g", "SE"),studlab = studyREF)
 
-#funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
+fig2b<-funnel(m.cor, common = FALSE, studlab=TRUE,backtransf=TRUE)
 
+library(forestplot)
+data<-tibble::tibble(mean=m.cor$cor,lower=FisherZInv(m.cor$lower),upper=FisherZInv(m.cor$upper),study=m.cor$studlab,n=m.cor$n,cor=round(m.cor$cor,2))
+data<-dplyr::arrange(data,mean)
 
+fp1 <- grid.grabExpr(print(data |>
+  forestplot(labeltext = c(study, n, cor),
+             xlab = "Correlation",
+             xticks = c(0, .25,.5,.75, 1),
+             clip = c(0, 1))|>
+    fp_add_header(study = "Study",n = "N",cor = expression(italic(r))) |>
+    fp_append_row(mean  = m.cor$TE.common,
+                lower = m.cor$lower.common,
+                upper = m.cor$upper.common,
+                study = "Summary",
+                n = sum(m.cor$n),
+                cor = round(m.cor$TE.common,2),
+                is.summary = TRUE) |>
+  fp_set_style(box = "grey50",
+               line = "grey20",
+               summary = "black",
+                txt_gp = fpTxtGp(label = list(gpar(cex = 0.80)),
+                                ticks = gpar(cex = 0.80),
+                                xlab  = gpar(cex = 0.80)))|>
+    fp_decorate_graph(grid = structure( m.cor$TE.common,gp = gpar(lty = 2, col = "grey30")))
+)
+)
+
+source('../etc/custom_funnel_plot.R')
+fp2 <- custom_funnel_plot(m.cor)
+
+gridExtra::grid.arrange(fp1, fp2, ncol=2, widths=c(2,1),heights=c(2,1))
 ```
 
 #### Explore qualities (in progress)
