--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -87,48 +87,7 @@ The initial search yielded 553 potential studies after excluding duplicate entri
 
 We converted all regression results into $R^2$ values for valence and arousal and classification results into Matthews correlation coefficient [*MCC*, @chicco2020advantages]. To increase consistency in our analyses, we excluded studies using incompatible features (e.g., spectrograms of audio files [@nag2022]), or dependent variables (e.g., one regression study analyzed valence and arousal together, but not separately [@chin2018]).
 
-\[Figure 1: flowchart of the study inclusions/eliminations\]
-
-```{dot}
-
-digraph sub {
-  node [fontname = Helvetica, fontsize = 14, shape = box, width = 4]
-  A [label = "Records identified from:
-                Web of Science (n = 142)
-                Scopus (n = 227)
-                OpenALEX (n = 278)" ]
-  B [label = "Records removed before screening: 
-                Duplicates entries/errors (n = 94)" ]
-  C [label = "Records after duplicates removed (n = 553)"]
-  D [label = "Records screened (n = 553)"]
-  E [label = "Records removed: 
-                Irrelevant titles/themes (n = 338)
-                Abstract screening (n = 95)
-                Discussion (n = 24)"]
-  F [label = "Full text articles assessed (n = 96)"]
-  G [label = "Studies included in final review (n = 46)"]
-  H [label = "Full text articles excluded
-             (n = 50)"]
-  I [label = "Studies excluded in final review (n = 10)"]
-  J [label = "Final selection (n = 36)"]
-  A->B
-  A->C
-  C->D
-  D->E
-  D->F
-  F->H 
-  F->G
-  G->I
-  G->J
-
-  
-  { rank = same; A B}
-  { rank = same; D, E}
-  { rank = same; F, H}
-  { rank = same; G, I}
-}
-
-```
+{{< include _figure1.qmd >}}
 
 ## Quality Control
 
@@ -183,22 +142,27 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 | NN           | 4,2249      | 0.340 \[-0.097; 0.668\] | \-    | \-    | 0.0761   | 97.1% |
 | RF           | 4,4074      | 0.702 \[0.391; 0.869\]  | \-    | \-    | 0.057    | 98.5% |
 
--   OTHER GROUPINGS? STIMULUS MIXED/SINGLE GENRE, PREDICTION/EXPLANATION
-<!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
-
-{{< include _figure1.qmd >}}
 
 The results indicate that valence can generally be predicted with moderately accuracy, with the best model from each of the 24 studies achieving an average correlation of _r_ = 0.658 (95% CI: 0.557-0.740), called "valence Max" in Table 2. However, when considering all models across these studies (n = 120), the overall prediction rate drops significantly to _r_ = 0.567. We argue that this lower correlation is likely due to the inclusion of baseline models reported in these studies, which may not reflect the true success of the task for the purposes of our analysis.
+
 
 Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.138) and Higgins & Thompson's $I^2$ statistic [@higgins2002quantifying] at 98.2%, reveals substantial heterogeneity. Since $I^2$ is heavily influenced by study size (with larger N leading to lower sampling error), its value may be less insightful in this context. In contrast, $\tau^2$, which is less sentive to the number of studies and directly linked to the outcome metric (_r_), provides a more reliable measure of heterogeneity in this case.
 
 To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents a forest plot of the random-effects model, based on the best-performing models from all studies. The range of prediction values (correlations) is broad, spanning from 0.13 to 0.92, with all studies except Koh et al. (2023) demonstrating evidence of positive correlations. A mean estimate of 0.66 is achieved by 15 out of the 24 models. While the confidence intervals are generally narrow due to the large sample sizes in each study, there are exceptions, such as smaller sample sizes in @beveridge2018po (n = 20), @saizclar2022pr (n = 40), and in @griffiths2021am (n = 40).
 
+{{< include _figure2.qmd >}}
+
 To gain insights into the factors contributing to the wide range of model success, we explored several ways of splitting the data. Table 2 presents two key splits: one based on the number of features used, which we hypothesized might influence model performance, and another based on the modeling techniques employed. In terms of feature sets, we categorized them into three groups: few features (<18), a large number of features (18–260), and massive feature sets (260+). Interestingly, models using a relatively small number of features (<18) performed best (_r_ = 0.881, 95% CI: 0.566–0.???) compared to those utilizing larger feature sets. However, it is worth noting that the models using massive feature sets (260+) also performed well (_r_ = 0.685), achieving better and more consistent results than the overall prediction rate (_r_ = 0.659). This observation is supported by the lowest heterogeneity index for the massive feature set group ($\tau^2$ = 0.044), indicating more consistent results across studies.
 
 When analyzing the data by modeling techniques, we identified five sub-groups. Notably, linear models (LM) and flexible discriminants (FD) were the most common, with 8 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (_r_ = 0.784, 95% CI: 0.625–0.881), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited substantially higher heterogeneity ($\tau^2$ = 0.137) compared to other techniques, where $\tau^2$ values were less than half of this. Flexible discriminants performed at a similar level to the overall model average (_r_ = 0.656, 95% CI: 0.484–0.779). The relatively poor performance of neural network (NN) models (_r_ = 0.340, 95% CI: -0.097–0.668) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies.
 
-These comparisons of sub-groupings are also influenced by other factors, such as the type of stimuli used in the studies and whether the objective is to explain or predict emotions. Although the sub-groupings result in an uneven distribution of studies and observations, they still offer valuable insights. Despite these caveats, the current sub-groupings enable us to identify interesting differences related to model success across the studies.
+We also ran the sub-grouping analyses across a combination of stimulus genres (single vs mixed) and number of the features to explore where the differences in model success might lie. For this purpose, we grouped the studies into small single genre/multigenre studies (1), medium single genre/multigenre studies (2), and medium-large single genre/multigenre studies (3), and huge multigenre studies (4). The small single genre/multigenre studies generally performed best (_r_ = 0.836, 95% CI: -0.197-0.989), followed by huge multi-genre studies (_r_ = 0.720, 95% CI: -0.189-0.965) while the medium and medium-large sized studies performance was between close the overall average (medium-large, _r_ = 0.669, 95% CI: 0.347-0.850 and medium _r_ = 0.587, 95% CI: 0.433-0.708). The heterogeneity was lowest in the huge multigenre studies ($\tau^2$ = 0.013) and highest in the small single genre/multigenre studies ($\tau^2$ = 0.318). 
+
+<!-- However, these analyses did not reveal any clear patterns, likely due to the small number of studies in each subgroup.  -->
+
+<!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
+
+These comparisons of sub-groupings are also influenced by other factors, such as the type of journal (psychology vs engineering) or whether the objective is to explain or predict emotions. Although the sub-groupings result in an uneven distribution of studies and observations, they still offer valuable insights. Despite these caveats, the  two main sub-groupings portrayed in Table 2 enable us to identify valuable differences related to model success across the studies.
 
 Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 and Figure 2 shows the same outputs as was done for valence describing the broad pattern of results in tabular and in forest plot formats. Table 3 give 
 
@@ -219,15 +183,8 @@ Table 3. Meta-analytic diagnostic for all regression studies predicting arousal 
 | NN           |             |                           |      |        |          |       |
 | RF           |             |                           |      |        |          |       |
 
-Figure 2. Forest plot of arousal prediction (using Max?)
 
-<!-- | Arousal Trim |             | 0.7932 \[0.7846; 0.8014\] | 96.5 | 0.0001 | 0.0030   | 73.3% | -->
-
-<!-- | Arousal M    |             | 0.7567 \[0.6752; 0.8199\] | 12.7 | 0.0001 | 0.0739   | 95.6% | -->
-
-<!-- | Arousal Md   |             | 0.7627 \[0.6819; 0.8252\] | 12.7 | 0.0001 | 0.0757   | 95.3% | -->
-
-<!-- | Aro.Max.Trm  | 14,12061    | 0.8182 \[0.8021; 0.8331\] | 25.6 | 0.0001 | 0.0132   | 96.8% | -->
+<!-- {{< include _figure3.qmd >}} -->
 
 Summarise here the pattern of results
 
