--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -1899,9 +1899,9 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   'marsyas.svm.mediaeval.mfcc timbre spectralCrest spectralFlatness .1' = c(0.686,0.045,0.398,0.075),
   'marsyas.svm.mediaeval.mfcc timbre spectralCrest spectralFlatness  chromagram  lineSpectralPairs.1' = c(0.587,0.066,0.341,0.097),
   'marsyas.gaussian process regression.mediaeval.mfcc.1' = c(0.623,0.057,0.323,0.073),
-  'marsyas.svm.mediaeval.mfcc timbre.1' = c(0.634,0.063,0.340,0.082),
-  'marsyas.svm.mediaeval.mfcc timbre spectralCrest spectralFlatness .1' = c(0.661,0.061,0.391,0.056),
-  'marsyas.svm.mediaeval.mfcc timbre spectralCrest spectralFlatness  chromagram  lineSpectralPairs.1' = c(0.665,0.048,0.442,0.049)
+  'marsyas.gaussian process regression.mediaeval.mfcc timbre.1' = c(0.634,0.063,0.340,0.082),
+  'marsyas.gaussian process regression.mediaeval.mfcc timbre spectralCrest spectralFlatness .1' = c(0.661,0.061,0.391,0.056),
+  'marsyas.gaussian process regression.mediaeval.mfcc timbre spectralCrest spectralFlatness  chromagram  lineSpectralPairs.1' = c(0.665,0.048,0.442,0.049)
 )
   },
   MODEL_VALIDATION = {10-fold cross validation},
